Fix dropdowns being not aligned

--- a/administrator/templates/atum/scss/template-rtl.scss
+++ b/administrator/templates/atum/scss/template-rtl.scss
@@ -31,6 +31,10 @@ th {
     margin-right: 220px;
     margin-left: 0;
   }
+
+  .custom-select {
+    float: right;
+  }
 }
 
 .dropdown-menu-right {
